force-app/main/default/objects/custom_create349__c/custom_create349__c.object-meta.xml
<CustomObject>
    <label>Custom created object349</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects349</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>