force-app/main/default/objects/custom_create349__c/fields/custom_create_349field593__c.field-meta.xml
<CustomField>
    <fullName>custom_create_349field593__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 349field593</label>
    <type>Checkbox</type>
</CustomField>