force-app/main/default/objects/custom_create349__c/fields/custom_create_349field673__c.field-meta.xml
<CustomField>
    <fullName>custom_create_349field673__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 349field673</label>
    <type>Checkbox</type>
</CustomField>